--- a/deepgis_xr/apps/web/templates/web/map_label.html
+++ b/deepgis_xr/apps/web/templates/web/map_label.html
@@ -7,19 +7,24 @@
     <title>DeepGIS</title>
     <link rel="stylesheet" href="/static/css/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"></script>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link href="/static/css/simple-sidebar.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
-    <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-mousewheel/3.1.13/jquery.mousewheel.min.js"></script>
+    
+    <!-- Leaflet and plugins -->
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" />
-    <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/leaflet.draw/1.0.4/leaflet.draw-src.css"/>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/leaflet-measure@3.1.0/dist/leaflet-measure.css">
+    
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet.draw/1.0.4/leaflet.draw-src.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/leaflet-measure@3.1.0/dist/leaflet-measure.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/leaflet-freehandshapes@0.3.7/dist/leaflet-freehandshapes.min.js"></script>
     <script src="https://unpkg.com/leaflet.vectorgrid@latest/dist/Leaflet.VectorGrid.bundled.js"></script>
-    <script src="/static/scripts/webclient/map_label.js"></script>
+    
+    <!-- Custom styles -->
     <style>
         #map {
             position: absolute;
@@ -180,6 +185,17 @@
         .retry-button:hover {
             background-color: #f0f0f0;
         }
+
+        .btn.active {
+            background-color: #0d6efd;
+            color: white;
+        }
+        
+        .leaflet-measure-path-measurement {
+            font-size: 12px;
+            color: black;
+            text-shadow: -1px 0 white, 0 1px white, 1px 0 white, 0 -1px white;
+        }
     </style>
 </head>
 
@@ -194,6 +210,34 @@
             <li class="sidebar-brand">
                 <a href="#" style="font-size: 150%; text-align: center;">DeepGIS</a>
             </li>
+            
+            <!-- Layer Controls -->
+            <li data-toggle="collapse" data-target="#layers" class="collapsed active">
+                <p class="bold"><i class="fa fa-layers" aria-hidden="true"></i> Layers <span class="arrow"></span></p>
+            </li>
+            <ul class="sidebar-nav2 sub-menu collapse show" id="layers">
+                <li>
+                    <div class="form-check">
+                        <input class="form-check-input" type="checkbox" id="baseMapToggle" checked>
+                        <label class="form-check-label" for="baseMapToggle">Base Map</label>
+                    </div>
+                </li>
+                <li>
+                    <div class="form-check">
+                        <input class="form-check-input" type="checkbox" id="overlayToggle" checked>
+                        <label class="form-check-label" for="overlayToggle">Overlay Layer</label>
+                    </div>
+                </li>
+                <li>
+                    <select class="form-select form-select-sm mt-2" id="baseMapSelect">
+                        <option value="satellite">Satellite</option>
+                        <option value="streets">Streets</option>
+                        <option value="terrain">Terrain</option>
+                    </select>
+                </li>
+            </ul>
+
+            <!-- Categories Section -->
             <li data-toggle="collapse" data-target="#categories" class="collapsed active">
                 <p class="bold"><i class="fa fa-list-ul" aria-hidden="true"></i> Categories <span class="arrow"></span></p>
             </li>
@@ -205,21 +249,77 @@
                     <button type="button" title="Add a new category for labels" id="category_submit" style="width:40%;" class="btn btn-primary btn-sm"><i class="fa fa-plus"></i>Add category</button>
                 </div>
             </form>
+
+            <!-- Drawing Tools -->
             <li data-toggle="collapse" data-target="#tools_coll" class="collapsed active">
-                <p class="bold"><i class="fa fa-cog" aria-hidden="true"></i> Free Hand tools <span class="arrow"></span></p>
+                <p class="bold"><i class="fa fa-pencil" aria-hidden="true"></i> Drawing Tools <span class="arrow"></span></p>
             </li>
             <ul class="sidebar-nav2 sub-menu collapse show" id="tools_coll">
-                <button id="freeHandButton" title="Freehand" type="button" class="btn btn-success btn-sm"><i class="fa fa-check"></i>Enable Free Hand</button>
+                <li>
+                    <button id="polygonTool" title="Polygon" type="button" class="btn btn-outline-primary btn-sm mb-2"><i class="fa fa-draw-polygon"></i> Polygon</button>
+                </li>
+                <li>
+                    <button id="freeHandButton" title="Freehand" type="button" class="btn btn-outline-primary btn-sm mb-2"><i class="fa fa-pencil"></i> Freehand</button>
+                </li>
+                <li>
+                    <button id="rectangleTool" title="Rectangle" type="button" class="btn btn-outline-primary btn-sm mb-2"><i class="fa fa-square-o"></i> Rectangle</button>
+                </li>
+                <li>
+                    <button id="circleTool" title="Circle" type="button" class="btn btn-outline-primary btn-sm"><i class="fa fa-circle-o"></i> Circle</button>
+                </li>
             </ul>
-            <li data-toggle="collapse" data-target="#DrawOrHist_col" class="collapsed active">
-                <p class="bold"><i class="fa fa-cog" aria-hidden="true"></i>Toggle Draw/Histogram<span class="arrow"></span></p>
+
+            <!-- Analysis Tools -->
+            <li data-toggle="collapse" data-target="#analysis_tools" class="collapsed active">
+                <p class="bold"><i class="fa fa-chart-bar" aria-hidden="true"></i> Analysis <span class="arrow"></span></p>
             </li>
-            <ul class="sidebar-nav2 sub-menu collapse show" id="DrawOrHist_col">
-                <button id="DrawOrHist" title="DrawOrHist" type="button" class="btn btn-success btn-sm"><i class="fa fa-check"></i>Plot histograms</button>
+            <ul class="sidebar-nav2 sub-menu collapse show" id="analysis_tools">
+                <li>
+                    <button id="measureTool" title="Measure" type="button" class="btn btn-outline-primary btn-sm mb-2"><i class="fa fa-ruler"></i> Measure</button>
+                </li>
+                <li>
+                    <button id="DrawOrHist" title="Plot Histograms" type="button" class="btn btn-outline-primary btn-sm mb-2"><i class="fa fa-chart-bar"></i> Plot Histograms</button>
+                </li>
+                <li>
+                    <button id="ShowAllHist" title="Show All Histograms" type="button" class="btn btn-outline-primary btn-sm"><i class="fa fa-chart-line"></i> Show All Histograms</button>
+                </li>
             </ul>
-            <ul class="sidebar-nav2 sub-menu collapse show" id="ShowAllHist1">
-                <button id="ShowAllHist" title="DrawOrHist" type="button" class="btn btn-outline-primary btn-sm"><i class="fa fa-check"></i>Show all histograms</button>
+
+            <!-- AI Tools -->
+            <li data-toggle="collapse" data-target="#ai_tools" class="collapsed active">
+                <p class="bold"><i class="fa fa-robot" aria-hidden="true"></i> AI Tools <span class="arrow"></span></p>
+            </li>
+            <ul class="sidebar-nav2 sub-menu collapse show" id="ai_tools">
+                <li>
+                    <button id="autoDetect" title="Auto Detect" type="button" class="btn btn-outline-primary btn-sm mb-2"><i class="fa fa-magic"></i> Auto Detect</button>
+                </li>
+                <li>
+                    <button id="refineMask" title="Refine Mask" type="button" class="btn btn-outline-primary btn-sm"><i class="fa fa-wand-magic-sparkles"></i> Refine Mask</button>
+                </li>
             </ul>
+
+            <!-- Export Options -->
+            <li data-toggle="collapse" data-target="#export_options" class="collapsed active">
+                <p class="bold"><i class="fa fa-download" aria-hidden="true"></i> Export <span class="arrow"></span></p>
+            </li>
+            <ul class="sidebar-nav2 sub-menu collapse show" id="export_options">
+                <li>
+                    <button id="exportGeoJSON" title="Export GeoJSON" type="button" class="btn btn-outline-primary btn-sm mb-2"><i class="fa fa-file-code"></i> GeoJSON</button>
+                </li>
+                <li>
+                    <button id="exportShapefile" title="Export Shapefile" type="button" class="btn btn-outline-primary btn-sm"><i class="fa fa-file-archive"></i> Shapefile</button>
+                </li>
+            </ul>
+
+            <!-- Action Buttons -->
+            <li class="mt-4">
+                <button type="button" title="Undo" id="undo" class="btn btn-outline-danger btn-sm w-100 mb-2">
+                    <i class="fa fa-undo"></i> Undo
+                </button>
+                <button id="saveLabels" title="Save Labels" type="button" class="btn btn-success btn-sm w-100">
+                    <i class="fa fa-save"></i> Save Labels
+                </button>
+            </li>
         </ul>
     </div>
     <div id="page-content-wrapper">
